# Thesis_Workspace

./: README.md  average_rate_plot.py  collective_launch.sh  deltatimes.py  empty_world.world  hz_data_collector.sh  launch_with_camera.sh  model.sdf  monitor_rates_10000hz.txt  monitor_rates_12500hz.txt  monitor_rates_15000hz.txt  monitor_rates_35000hz.txt  monitor_rates_5000hz.txt  odometry_data_converted(1).csv  odometry_data_converted.csv  setup.txt  standalone_rates_10000hz.txt  standalone_rates_15000hz.txt  standalone_rates_20000hz.txt  standalone_rates_35000hz.txt  teleop_node_for_reading_XOP.py  test_torch  upgraded_rate_plotter.py
follow_robot_plugin/: CMakeLists.txt
follow_robot_plugin/src/: follow_robot_plugin.cpp
hds_and_website/: README.md
hds_and_website/ras_reliability_backend/: README.md  setup.cfg  setup.py
hds_and_website/ras_reliability_backend/launch/: my_launch_file.launch.py  web_yolo_injection.launch.py
hds_and_website/ras_reliability_backend/pyflask/: confusion_matrix.py  copilot_relaunch.sh  cycle_dist.py  empty.txt  flasknoreload.py  publisher.py  robot.py  server.py  shutdown_script.sh  subtester.py
hds_and_website/ras_reliability_backend/pyflask/adult_poly_10min/: speed_log_20240510_112348.txt
hds_and_website/ras_reliability_backend/pyflask/log_dir/: speed_log_20240416_151622.txt  speed_log_20240417_110259.txt  speed_log_20240418_121129.txt  speed_log_20240421_142207.txt  speed_log_20240421_143652.txt  speed_log_20240421_144715.txt  speed_log_20240421_164030.txt  speed_log_20240422_095358.txt  speed_log_20240422_095547.txt  speed_log_20240422_095832.txt  speed_log_20240422_100706.txt  speed_log_20240422_110829.txt  speed_log_20240422_115608.txt  speed_log_20240423_133810.txt  speed_log_20240513_124512.txt  speed_log_20240527_141938.txt  speed_log_20240531_120945.txt  speed_log_20240611_171750.txt  speed_log_20240611_173235.txt  speed_log_20240616_142338.txt  speed_log_20240617_144655.txt
hds_and_website/ras_reliability_backend/pyflask/plotting/: barplot_deltatimes.py  confusion_matrix.py  crosstable.py  hz_data_collector.sh  odometry_data.csv  odometry_plot.py  plotmax.py  speedplot.py  (+5 more)
hds_and_website/yolov6/: package.xml  setup.cfg  setup.py
imrt_teleop/: package.xml  setup.cfg  setup.py
imrt_teleop/imrt_teleop/: imrt_teleop.py  teleop_triggers.py
imrt_teleop/launch/: launch_turtlebot3_with_light.launch.py  turtlebot_teleop.launch.py
imrt_virtual_joy/: package.xml  setup.cfg  setup.py
imrt_virtual_joy/imrt_virtual_joy/: __init__.py  gamepad.py  gamepad_talker.py  gamepad_talker_pre_JOY.py  joystick.py  resources.py  virtual_gamepad.py
imrt_virtual_joy/launch/: imrt_virtual_joy.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
maze_launch/: package.xml  setup.cfg  setup.py
maze_launch/launch/: imrt_maze.launch.py  maze.launch.py  turtlebot_maze.launch.py
maze_launch/worlds/: big_hello.world  hello.world  maze1.world  maze2.world  maze3.world
node_manager/: package.xml  setup.py
ros_demo/: CMakeLists.txt
ros_demo/launch/: copilot_launch.py  rosnode_launch.py
ros_demo/src/: copilot_logger.cpp  copilot_monitor.cpp  monitor.c  monitor.h
sRobot_publisher/: package.xml  setup.cfg  setup.py
sRobot_publisher/sRobot_publisher/: publisher_node.py
simulation_extras/: GreenCircle.stl  RedCircle.stl  YellowCircle.stl  model.sdf  readme.txt  thorvald2.stl
simulation_extras/[REMOVENAME}.ros/virtual_maize_field/: generated.world  gt_map.csv  robot_spawner.launch.py
simulation_extras/{REMOVENAME}.gazebo/: gui.ini
srobot/: CMakeLists.txt
srobot/src/: copilot_logger.cpp  copilot_monitor.cpp  monitor.c  monitor.h
srobot_publisher/: package.xml  setup.cfg  setup.py
srobot_publisher/srobot_publisher/: plot.py  publisher_node.py
srobot_realistic_output/: package.xml  setup.cfg  setup.py
srobot_realistic_output/launch/: srobot_launch.py
srobot_realistic_output/srobot_realistic_output/: UVLight.py  fixed_publisher.py  float_subscriber.py  publisher.py  subscriber.py
toggle_greenzone_plugin/: CMakeLists.txt
toggle_greenzone_plugin/src/: toggle_greenzone_plugin.cpp
toggle_light_plugin/: CMakeLists.txt
toggle_light_plugin/src/: toggle_light_plugin.cpp
(+75 files in other folders)
