<?xml version="1.0"?>
<package format="3">
  <name>node_manager</name>
  <version>0.0.1</version>
  <description>A node manager for the CopilotRV Monitor and Logger</description>

  <maintainer email="tage.andersen@nmbu.no">Tage Andersen</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
